flapivor/tests/m3/hopix/typechecker/good/32-constructor-with-data.hopix
type Option = Some (Int) | None

val none : Option = None<>

val some42 : Option = Some<> (42)