flapivor/tests/m3/hopix/typechecker/bad/52-constructor-08.hopix
type L = N | C (Int, L)

val main : L = C<> (1, C<> (2, "N"))